bug on mobile nav fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -95,7 +95,6 @@ header {
   align-items: center;
   padding: 1rem;
   background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(12px);
   transition: all 0.3s ease-in-out;
 }
 header a {
@@ -112,7 +111,7 @@ header a {
 /* Overlay */
 .overlay {
   position: fixed;
-  z-index: 101;
+  z-index: 100;
   top: 0;
   left: 0;
   width: 100vw;
@@ -120,6 +119,7 @@ header a {
   background-color: rgba(0, 0, 0, 0.7);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
+  transform: translateX(-100vw);
 }
 .overlay-active {
   transform: translateX(0);
@@ -288,7 +288,7 @@ section#about {
 .about-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-wrap: wrap;
 }
 .message {
@@ -316,7 +316,7 @@ section#about {
   font-size: 1.5rem;
   color: var(--text-color);
   font-family: "Poppins", sans-serif;
-  line-height: 1.5;
+  line-height: 1.3;
   transition: all 0.3s ease-in-out;
   text-align: left;
   font-weight: 500;
@@ -332,7 +332,7 @@ section#about {
 @media (max-width: 37.5em) {
   .menu-bars {
     top: 0.5rem;
-    right: 1rem;
+    right: 2rem;
   }
   .img-container img {
     display: none;
